<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="86dp"
            android:layout_height="138dp"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imgLogo"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textViewApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="1">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutProp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="0.03"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewProp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/about_prop"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textViewAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_autor"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textViewContato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_contato"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layouTexto"
        android:layout_width="fill_parent"
        android:layout_height="194dp"
        android:layout_gravity="top"
        android:layout_weight="0.02"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewSobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewVersao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:textSize="15sp" />

        <Button
            android:id="@+id/aboutBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_bt" />

    </LinearLayout>

</LinearLayout>
