<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contac_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.equadrado.obstettools.ContacUsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="116dp"
                android:layout_height="174dp"
                app:srcCompat="@drawable/logo"
                android:id="@+id/imageView2" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4" />

                <TextView
                    android:text="@string/about_autor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:text="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_marginBottom="20dp"
                android:layout_gravity="left|start"
                android:gravity="left|start"
                android:autoLink="all"
                android:textSize="18sp"
                android:textAlignment="textStart" />

            <TextView
                android:text="@string/site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_marginBottom="20dp"
                android:layout_gravity="left|start"
                android:gravity="left|start"
                android:autoLink="all"
                android:textSize="18sp"
                android:textAlignment="textStart" />

            <TextView
                android:text="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_marginBottom="20dp"
                android:layout_gravity="left|start"
                android:gravity="left|start"
                android:autoLink="all"
                android:textSize="18sp"
                android:textAlignment="textStart" />
        </LinearLayout>

        <Button
            android:id="@+id/aboutBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_bt"
            android:layout_gravity="center" />

    </LinearLayout>

</RelativeLayout>
